--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -3080,11 +3080,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Přizpůsobení motta gangu",
+ 	 	 	 	 	"trans": "Přizpůsobte si motto gangu",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "Přizpůsobení gangového obrázku",
+ 	 	 	 	 	"trans": "Přizpůsobte si obrázek gangu",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3120,11 +3120,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Přizpůsobení motta gangu",
+ 	 	 	 	 	"trans": "Přizpůsobte si motto gangu",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "Přizpůsobení gangového obrázku",
+ 	 	 	 	 	"trans": "Přizpůsobte si obrázek gangu",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3168,11 +3168,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "Přizpůsobení motta gangu",
+ 	 	 	 	 	"trans": "Přizpůsobte si motto gangu",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"10": {
- 	 	 	 	 	"trans": "Přizpůsobení gangového obrázku",
+ 	 	 	 	 	"trans": "Přizpůsobte si obrázek gangu",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"11": {
@@ -3212,11 +3212,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Přizpůsobení motta gangu",
+ 	 	 	 	 	"trans": "Přizpůsobte si motto gangu",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "Přizpůsobení gangového obrázku",
+ 	 	 	 	 	"trans": "Přizpůsobte si obrázek gangu",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3252,7 +3252,7 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Přizpůsobte si motto gangů",
+ 	 	 	 	 	"trans": "Přizpůsobte si motto gangu",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
@@ -3355,41 +3355,41 @@
  	 	},
  	 	"ammo1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Energetická Buňka",
+ 	 	 	 	"trans": "Energetický článek",
  	 	 	 	"eng": "Energy Cell"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Přenosné energetické paměťové zařízení, může být použito jako spotřební munice pro vaše Speciální Zbraně",
+ 	 	 	 	"trans": "Přenosné zařízení pro ukládání energie, může být použito jako spotřební munice pro vaše Speciální Zbraně",
  	 	 	 	"eng": "Portable energy storage device, it can be used as consumable ammo for your Special Weapons"
  	 	 	}
  	 	},
  	 	"ammo2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Výboj Antihmoty",
+ 	 	 	 	"trans": "Antihmotový náboj",
  	 	 	 	"eng": "Anti Matter Charge"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Generátor energie antihmoty, high-tech, miniaturizovaný a na jednorázové použití. \r\n        Tato položka vytváří enormní množství energie. Můžete ji použít jako munici pro Ničivou Zbraň",
+ 	 	 	 	"trans": "Generátor energie antihmoty, high-tech, miniaturizovaný a na jednorázové použití. \r\n        Toto zařízení vytváří enormní množství energie. Můžete ho použít jako munici pro Ničivou Zbraň",
  	 	 	 	"eng": "High-tech, miniaturized, one-time use, antimatter energy generator. \r\n        This item produces enormous amounts of power. You can use this as ammunition for your destructive weapon. "
  	 	 	}
  	 	},
  	 	"ammoTech1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Technická součástka Munice",
+ 	 	 	 	"trans": "Technická součástka munice",
  	 	 	 	"eng": "Ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Technické součásti munice mohou být běžně nalezeny v oběhu černého trhu. \r\n        Můžete je použít na výrobu munice, pokud víte jak na to.",
+ 	 	 	 	"trans": "Technické součástky munice mohou být běžně nalezeny na černém trhu. \r\n        Můžete je použít na výrobu munice, pokud víte jak na to.",
  	 	 	 	"eng": "Ammunition tech parts, These can be commonly found circulating the black market. \r\n        You can use these to craft ammunition if you understand how."
  	 	 	}
  	 	},
  	 	"ammoTech2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Vojenská Technická součástka Munice",
+ 	 	 	 	"trans": "Vojenská technická součástka munice",
  	 	 	 	"eng": "Military ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Vojenská úroveň technických součástek Munice, běžně používané vládou, armádou a elitami. Může být použita na výrobu munice, pokud víte jak na to.",
+ 	 	 	 	"trans": "Vojenská úroveň technických součástek munice, běžně používané vládou, armádou a elitami. Může být použita na výrobu munice, pokud víte jak na to.",
  	 	 	 	"eng": "Military grade ammunition tech parts, commonly used by government, military and the elites,can be used to craft into usable Ammo if you have the know-how"
  	 	 	}
  	 	},
@@ -3399,49 +3399,49 @@
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Technologický šrot z rozebraných zařízení, může být použito k zpětné rekonstrukci pro zisk zkušeností v dovednosti Tisku.\r\n         Zpětnou rekonstrukci můžete provést v Pracovním Hubu.",
+ 	 	 	 	"trans": "Technický šrot z rozebraných zařízení, může být použit k zpětné rekonstrukci pro zisk zkušeností v dovednosti 3D Tisku.\r\n         Zpětnou rekonstrukci můžete provést v Pracovním Hubu.",
  	 	 	 	"eng": "Technology scrap from disassembled equipment, this can be reverse engineered to gain printing xp. \r\n        You can perform reverse engineering in the Job Hub."
  	 	 	}
  	 	},
  	 	"primaryWeapon": {
  	 	 	"name": {
- 	 	 	 	"trans": "Primární zbraně",
+ 	 	 	 	"trans": "Primární zbraň",
  	 	 	 	"eng": "Primary Weapon"
  	 	 	}
  	 	},
  	 	"secondary": {
  	 	 	"name": {
- 	 	 	 	"trans": "Speciální zbraně",
+ 	 	 	 	"trans": "Speciální zbraň",
  	 	 	 	"eng": "Special Weapon"
  	 	 	}
  	 	},
  	 	"tertiary": {
  	 	 	"name": {
- 	 	 	 	"trans": "Ničivé zbraně",
+ 	 	 	 	"trans": "Ničivá zbraň",
  	 	 	 	"eng": "Destructive Weapon"
  	 	 	}
  	 	},
  	 	"helmet": {
  	 	 	"name": {
- 	 	 	 	"trans": "helmy",
+ 	 	 	 	"trans": "helma",
  	 	 	 	"eng": "helmet"
  	 	 	}
  	 	},
  	 	"upperArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "horního brnění",
+ 	 	 	 	"trans": "horní brnění",
  	 	 	 	"eng": "upper armor"
  	 	 	}
  	 	},
  	 	"lowerArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "Dolního brnění",
+ 	 	 	 	"trans": "Dolní brnění",
  	 	 	 	"eng": "lower armor"
  	 	 	}
  	 	},
  	 	"boots": {
  	 	 	"name": {
- 	 	 	 	"trans": "bot",
+ 	 	 	 	"trans": "boty",
  	 	 	 	"eng": "boots"
  	 	 	}
  	 	},
@@ -3453,27 +3453,27 @@
  	 	},
  	 	"healing1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Bolestyč",
+ 	 	 	 	"trans": "Pain Away",
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Máte bolesti hlavy? Použijte Bolestyč™ pro zmírnění bolesti!",
+ 	 	 	 	"trans": "Máte bolesti hlavy? Použijte Pain Away™ pro zmírnění bolesti!",
  	 	 	 	"eng": "Do you have headache? Use Pain Away™ to relieve your pain!"
  	 	 	}
  	 	},
  	 	"healing2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Degradovaný Opravný Nanobot",
+ 	 	 	 	"trans": "Degradovaný opravný nanobot",
  	 	 	 	"eng": "Degraded Nano Repair Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Starý opravný nanobot, obvykle používán k opravě malých technologických zařízení.",
+ 	 	 	 	"trans": "Starý opravný nanobot, obvykle používán k opravě malých technických zařízení.",
  	 	 	 	"eng": "An old nano repair bot, usually used to repair small tech devices."
  	 	 	}
  	 	},
  	 	"healing3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Degradovaný Lékařský Nanobot",
+ 	 	 	 	"trans": "Degradovaný lékařský nanobot",
  	 	 	 	"eng": "Degraded Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
